--- a/figaro-unlock/manifest.json
+++ b/figaro-unlock/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Figaro Unlock",
-  "description": "Enleve le floutage du Figaro",
-  "version": "1.0.0",
+  "description": "Enleve les bannieres anti bloqueur de publicite du Figaro / Le Point / Marie Claire / L'Equipe / L'Express",
+  "version": "1.0.1",
   "icons": {
     "16": "data/images/icon-16.png",
     "48": "data/images/icon-48.png",
